Thu May 12 18:08:47 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Added command settings for
          preprocessing C and C++ source files.

        * include/makeinclude/rules.local.GNU: Added rules to preprocess
          C and C++ files when directed.
        
          These allow one to now quickly produce a preprocessed version of
          a source file. Ala... make -f GNUmakefile.ACE ACE.i
          would preprocess ACE.cpp and put the result in ACE.i.

Fri Apr 29 14:01:29 UTC 2011  Steve Huston  <shuston@riverace.com>

        * tests/tests.mpc: For Message_Queue_Test add -bmaxdata:0x20000000 to
          linker options to extend the available data space at run time.
          Avoids the heap smashing the stacks.

Fri Apr 22 15:19:29 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Add support for XL C++ 11.

Mon Feb 28 20:29:59 UTC 2011  Steve Huston  <shuston@riverace.com>

        * examples/ASX/Event_Server/Event_Server/Event_Analyzer.cpp:
        * examples/ASX/UPIPE_Event_Server/Event_Analyzer.cpp: Replaced the
          name "mod_name" with "module_name" to avoid a clash with macro
          defined in /usr/include/sys/stropts.h encountered when optimized
          build was done.

Mon Feb 28 18:10:19 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Remove the -qfuncsect
          option from CCFLAGS; it caused an occasional odd problem and the
          only reason it was added (Jul 17 2002) was to try and remove
          duplicate symbol diagnostics from template instantiations.
          Thanks to Phil Mesnier for raising this issue and identifying
          the fix.

Tue Feb  1 14:28:18 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/String_Base.cpp (operator+=): Add a temporary for the return
          value to quiet an IBM XL C++ 10 optimizer warning about returning