@@ -1406,15 +1406,25 @@ ACE_Select_Reactor_T<ACE_SELECT_REACTOR_TOKEN>::handle_events
 
   ACE_GUARD_RETURN (ACE_SELECT_REACTOR_TOKEN, ace_mon, this->token_, -1);
 
-  if (ACE_OS::thr_equal (ACE_Thread::self (),
-                         this->owner_) == 0 || this->deactivated_)
-    return -1;
+  if (ACE_OS::thr_equal (ACE_Thread::self (), this->owner_) == 0)
+    {
+      errno = EACCES;
+      return -1;
+    }
+  if (this->deactivated_)
+    {
+      errno = ESHUTDOWN;
+      return -1;
+    }
 
   // Update the countdown to reflect time waiting for the mutex.
   countdown.update ();
 #else
   if (this->deactivated_)
-    return -1;
+    {
+      errno = ESHUTDOWN;
+      return -1;
+    }
 #endif /* ACE_MT_SAFE */
 
   return this->handle_events_i (max_wait_time);
