@@ -1,3 +1,13 @@
+Wed Jun 29 20:47:33 UTC 2011  Steve Huston  <shuston@riverace.com>
+
+        * ace/Select_Reactor_T.cpp:
+        * ace/TP_Reactor.cpp:
+        * ace/Dev_Poll_Reactor.cpp:
+        * ace/WFMO_Reactor.cpp:
+          In handle_events(), if returning -1 because the reactor isn't
+          ready to handle events, also set errno to ESHUTDOWN to tell the
+          caller why. Fixes Bugzilla #3974.
+
 Thu May 12 18:08:47 UTC 2011  Steve Huston  <shuston@riverace.com>
 
         * include/makeinclude/wrapper_macros.GNU: Added command settings for
